# swagger.json
@@ -2,15 +2,15 @@
     "swagger": "2.0",
     "info": {
       "version": "1.0.0",
-      "title": "Node Project",
+      "title": "My Node Project",
       "description": "Node Project with swagger",
       "license": {
         "name": "MIT",
-        "url": "https://localhost:3005/api"
+        "url": "https://localhost:3003/api/"
       }
     },
     "schemes": ["http"],
-    "host": "localhost:3005",
+    "host": "localhost:3003",
     "basePath": "/api",
     "paths" : {
         "/getAll" : {
@@ -38,8 +38,32 @@
                 }
             }
         },
+        "/getAllWebsites" : {
+            "get" : {
+                "summary" : "Get all ",
+                "description": "Get all the users",
+                "produces": ["application/json"],
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/user"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid status value",
+                        "schema": {
+                            "$ref": "#/definitions/InvalidResponse"
+                        }
+                    }
+                }
+            }
+        },
         "Add" : {
-            
             "post" : {
                 "summary" : "Save the task",
                 "description": "Save the task",
